--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.220.0",
-    "next": "13.4.3",
+    "next": "^13.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/react-slick": "^0.23.10",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
