--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "eslint-config-next": "^12.0.4",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.220.0",
     "next": "^13.4.6",
