--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.9.0",
+    "react-scroll": "^1.8.9",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/react-scroll": "^1.8.7",
     "@types/react-slick": "^0.23.10",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
